Add interface for metadata provider.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,8 @@ set(PROJECT_SOURCES
         main.cpp
         mainwindow.cpp
         mainwindow.h
+        metadata_provider.h
+        metadata_provider.cpp
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
